<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.developer.gavinejoyce.icubeofficial.Registration"
    tools:showIn="@layout/activity_registration"
    android:background="#FCE4EC">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/etext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventnam"
        android:textSize="20sp"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"/>
    <EditText
        android:id="@+id/etext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Cname"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@id/etext1"/>
    <EditText
        android:id="@+id/etext3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Regno"
        android:inputType="number"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@id/etext2"/>
    <EditText
        android:id="@+id/etext4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@id/etext3"/>
    <EditText
        android:id="@+id/etext5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contact"
        android:inputType="phone"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@id/etext4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etext5"
        android:text="@string/btnreg"
        android:background="#B2DFDB"
        android:layout_marginTop="20dp"
        android:id="@+id/register"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"/>

</RelativeLayout>
