<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.developer.gavinejoyce.icubeofficial.Event_tabs"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#FFE082">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card1"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:text="@string/fevent1"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event1"
            android:clickable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card2"
            android:text="@string/fevent2"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event2"
            android:layout_below="@id/event1"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card1"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:text="@string/fevent3"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event3"
            android:layout_below="@id/event2"
            android:clickable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card2"
            android:text="@string/fevent4"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event4"
            android:layout_below="@id/event3"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card1"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:text="@string/fevent5"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event5"
            android:layout_below="@id/event4"
            android:clickable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card2"
            android:text="@string/fevent6"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event6"
            android:layout_below="@id/event5"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card1"
            android:text="@string/fevent7"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event7"
            android:layout_below="@id/event6"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card2"
            android:text="@string/fevent8"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event8"
            android:layout_below="@id/event7"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card1"
            android:text="@string/fevent9"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event9"
            android:layout_below="@id/event8"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/card2"
            android:text="@string/fevent10"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event10"
            android:layout_below="@id/event9"
            android:clickable="true"/>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
