<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF59D"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.developer.gavinejoyce.icubeofficial.Event_tabs">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="#222c37"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:text="@string/tevent1"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event3"
            android:clickable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="#2d3741"
            android:text="@string/tevent2"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event4"
            android:layout_below="@id/event3"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="#222c37"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:text="@string/tevent3"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event5"
            android:layout_below="@id/event4"
            android:clickable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="#2d3741"
            android:text="@string/tevent4"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event6"
            android:layout_below="@id/event5"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="#222c37"
            android:text="@string/tevent5"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event7"
            android:layout_below="@id/event6"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="#2d3741"
            android:text="@string/tevent6"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            android:layout_margin="5dp"
            android:padding="50dp"
            android:id="@+id/event8"
            android:layout_below="@id/event7"
            android:clickable="true"/>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
